# McDesktop

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  linux_build.yml  win_build.yml
docs/: index.html
src/: cache.cpp  cache.h  daemon.cpp  daemon.h  desktop.cpp  desktop.h  engine.cpp  engine.h  exception.cpp  exception.h  heic.cpp  heic.h  main.cpp  mainwindow.cpp  mainwindow.h  parser.cpp  parser.h  wallpaper.cpp  wallpaper.h
